Fix #33328: cycles not rendering dupliframes, needs an exception.